# HW30

./: db.sqlite3  pyproject.toml  requirements.txt
HW27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/fixtures/: ads.json  categories.json  location.json  user.json
ads/migrations/: 0001_initial.py  0002_alter_ads_id.py  0002_rename_author_id_ads_author_and_more.py  0003_alter_categories_id.py  0003_alter_location_lat_alter_location_lng_and_more.py
ads/urls/: ads_urls.py  cats_urls.py  location_urls.py  user_urls.py
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
authentication/urls/: location_urls.py  user_urls.py
data/: utils.py
fixtures/: ads.json  categories.json  location.json  user.json
